fixed genres components added book & comment components
